# tanuki-bot

./: README.md  pyproject.toml
src/tanuki_bot/: __main__.py
src/tanuki_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tanuki_bot/cli/: app.py
src/tanuki_bot/config/: config.py  paths.py
src/tanuki_bot/core/: doctor.py  init.py  llm.py  plan.py  repo_scan.py  runner.py  task_add.py  task_execute.py
src/tanuki_bot/projects/: commands.py  models.py  registry.py
src/tanuki_bot/tasks/: commands.py
src/tanuki_bot/ui/: branding.py
src/tanuki_bot/ui_web/: pages.py  server.py
