[project]
name = "tanuki-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.2",
    "typer>=0.21.1",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[project.scripts]
tanuki = "tanuki_bot.cli.app:app"
